# StudioSlab

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  SPEC.md  conanfile.ini  no-gpu.Dockerfile  total-lines.txt
Apps/: CMakeLists.txt  MainR2toR.cpp  MainRtoR.cpp  MainRtoRThermal.cpp  TestsMain.cpp
Apps/Fields/: MainR2toR.cpp  MainRtoR.cpp  MainRtoRThermal.cpp
Apps/Simulations/: BCInterface.cpp  BCInterface.h  OutputStructureBuilderBase.cpp  OutputStructureBuilderBase.h  SimulationsApp.cpp  SimulationsApp.h
Apps/Tests/: OpenGLView.cpp  OpenGLView.h  TestsApp.cpp  TestsApp.h  TestsMain.cpp  WindowPanelTest.cpp  WindowPanelTest.h  WindowTreeBuilderTest.h
Apps/XY/: XYApp.cpp  main.cpp
Lib/: AppBase.cpp  AppBase.h  Application.cpp  Application.h  CMakeLists.txt  CrashPad.cpp  CrashPad.h  Doxyfile  MathApp.cpp  MathApp.h  StudioSlab.cpp  StudioSlab.h
Lib/App/: AppBase.cpp  AppBase.h  CMakeLists.txt  CrashPad.cpp  SafetyNet.cpp
Lib/Backend/: Backend.cpp  Backend.h  Program.h
Lib/Base/: Base.cpp  CMakeLists.txt
Lib/Common/: BinaryToInt.cpp  BinaryToInt.h  BoostNoExcept.h  CMakeLists.txt  CUDAUtils.cpp  ColorStrings.h  CoreNativeTypes.h  DeviceConfig.h  NativeTypes.h  Printing.cpp  RandUtils.cpp  RandUtils.h  Resources.cpp  Resources.h  ResourcesFolder.h  STDLibInclude.cpp  STDLibInclude.h  SharedPointer.h  Singleton.h  Timer.h  Typedefs.h  Types.cpp  Types.h  Utils.cpp  Utils.h
Lib/Core/: Base.cpp  Base.h  CMakeLists.txt  FObject.cpp  FObject.h  SlabCore.cpp  SlabCore.h
Lib/Fields/: .gitignore  BCInterface.h  CMakeLists.txt  SimulationsApp.cpp  SimulationsApp.h  SimulationsAppRtoR.cpp
Lib/Graphics/: Animation.h  Animation_depr.h  Animator.cpp  Animator.h  BaseMonitor.cpp  BaseMonitor.h  CMakeLists.txt  FunctionRenderer.h  GraphCollections.h  GraphicsModule.cpp  GraphicsModule.h  IDrawBackend2D.h  IDrawable.cpp  IDrawable.h  MeshUtils.cpp  MeshUtils.h  PlottingUtils.h  SlabGraphics.cpp  SlabGraphics.h  SlabGraphicsModule.cpp  SlabGraphicsModule.h  Types.cpp  Types.h  Types2D.cpp  Types2D.h  Types3D.cpp  Types3D.h  Utils.cpp  Utils.h  Window.cpp  Window.h  ZoomPanRotate.cpp  ZoomPanRotate.h  graph.h
Lib/Mappings/: BCBuilder.cpp  BCBuilder.h  BCInterface.cpp  BCInterface.h  CMakeLists.txt  FunctionRenderer.cpp  FunctionRenderer.h  SimulationBuilder.cpp  SimulationBuilder.h
Lib/Maps/: CMakeLists.txt  FunctionRenderer.cpp  FunctionRenderer.h
Lib/Math/: App.cpp  App.h  CMakeLists.txt  Constants.h  MathModule.cpp  MathModule.h  Point.cpp  Point.h  SlabMath.cpp  SlabMath.h
Lib/Models/: CMakeLists.txt  DynamicsNumericConfig.cpp  DynamicsNumericConfig.h
Lib/Phys/: App.cpp  App.h  CMakeLists.txt
Lib/Studios/: CMakeLists.txt
Lib/Util/: BenchmarkHistogram.cpp  BenchmarkHistogram.h  MathTypes.h  Utils.cpp  Utils.h  nr3.h  timer.h
Lib/Utils/: Angles.h  Arrays.cpp  Arrays.h  Assert.h  CGMatrix.cpp  CGMatrix.h  CMakeLists.txt  CUDAUtils.cpp  CUDAUtils.h  Compiler.h  Containers.h  CyclicIterator.h  DeviceConfig.h  EncodingUtils.cpp  EncodingUtils.h  Exception.cpp  Exception.h  Files.cpp  Files.h  List.h  Map.cpp  Map.h  Maps.ixx  NativeTypes.h  Numbers.h  OMPUtils.cpp  OMPUtils.h  OnFirstRun.h  Optional.h  Pointer.h  Printing.cpp  Printing.h  PythonUtils.cpp  PythonUtils.h  RandUtils.cpp  RandUtils.h  ReferenceIterator.h  Resources.h  Result.h  STDLibInclude.h  (+20 more)
Lib/tests/: CMakeLists.txt  test.cpp  test_composition_v2.cpp  test_model_v2.cpp  test_numerics_characterization.cpp  test_numerics_v2.cpp  test_ontology_graph_v2.cpp  test_plot2d_legacy_reflection_bridge.cpp  test_plot2d_v2.cpp  test_reflection_semantics_v1.cpp  test_result.cpp  test_typesetting_service.cpp
Studios/: CMakeLists.txt
Studios/CLI/: CMakeLists.txt  main.cpp
Studios/Common/: SessionLiveViewStatsV2.cpp  SessionLiveViewStatsV2.h
Studios/Fields/: CMakeLists.txt  MainR2toR.cpp  MainRtoR.cpp  MainRtoRPeriodicBC.cpp  MainRtoRThermal.cpp
Studios/Fields.jl/: BasicOscillon1+1.ipynb  BasicOscillon1+1.jl  Manifest.toml  Project.toml  signum-Gordon_2d.ipynb
Studios/FieldsTools/: .gitignore
Studios/FunctionalMinimization/: CMakeLists.txt  FM-Main.cpp
Studios/Lab/: CMakeLists.txt  LabWindowManager.cpp  LabWindowManager.h  MainStudioSlab.cpp  ParameterGUIRenderer.cpp  ParameterGUIRenderer.h  StudioConfig.h  StudioSlabApp.cpp  StudioSlabApp.h  StudioWindowManager.cpp  StudioWindowManager.h
Studios/LabV2/: CMakeLists.txt  LabV2GraphPlaygroundController.cpp  LabV2GraphPlaygroundController.h  LabV2Panels.cpp  LabV2Panels.h  LabV2SubstrateGraphCanvas.cpp  LabV2WindowManager.cpp  LabV2WindowManager.h  LabV2WindowManagerGraphPlayground.cpp  LabV2WindowManagerGraphPlaygroundSerialization.cpp  LabV2WindowManagerModelPanels.cpp  LabV2WindowManagerOntologyPanels.cpp  LabV2WindowManagerSchemesPanels.cpp  MainStudioSlabV2.cpp  SimulationManagerV2.cpp  SimulationManagerV2.h  StudioConfigV2.h  StudioSlabV2App.cpp  StudioSlabV2App.h
Studios/Lib/: .gitignore  CMakeLists.txt  glad.c
Studios/Little-Plane-Designer/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  DebugDraw.h  Defaults.h  FLittlePlane.cpp  FLittlePlane.h  FPlaneFactory.cpp  FPlaneFactory.h  Foil.cpp  Foil.h  Interfaces.h  LPDMain.cpp  NACA2412.cpp  NACA2412.h  TODO.md  Utils.cpp  Utils.h
Studios/MolecularDynamics/: App.cpp  App.h  Builder.cpp  Builder.h  CMakeLists.txt  Monitor.cpp  Monitor.h  Particle.cpp  Particle.h  Recipe.cpp  Recipe.h  Stepper.cpp  Stepper.h  VerletStepper.cpp  VerletStepper.h  main.cpp  params.cuh
Studios/MolecularDynamics_standalone/: CMakeLists.txt  TO-DO.txt
Studios/Notebooks/: AbsolutePotential.ipynb  Conformal-transform.xopp  SignFunction.ipynb  nonhomog_pert.ipynb  scale-invariantz.xopp
Studios/Prototype/: CMakeLists.txt
Studios/PyFields2D/: Fields2DMain.py  SignumGordonShockwave2D.py
Studios/Tests/: BezierTests.cpp  BezierTests.h  CMakeLists.txt  FourierTestWindow.cpp  FourierTestWindow.h  GLFreeTypeTests.cpp  GLFreeTypeTests.h  Graph3DTests.cpp  Graph3DTests.h  ImGuiUITest.cpp  ImGuiUITest.h  LaTeXTests.cpp  LaTeXTests.h  (+15 more)
(+4018 files in other folders)
